--- a/releases/simplewebapp.yaml
+++ b/releases/simplewebapp.yaml
@@ -10,13 +10,13 @@ metadata:
 spec:
   releaseName: simplewebapp
   chart:
-    git: ssh://git@github.com/pcherednichenko/kubernetesconf
+    git: ssh://git@github.com/Sergeybon/kubernetesconf
     ref: master
     path: charts/simplewebapp
   values:
     image:
-      repository: gcr.io/test-project-266218/github.com/pcherednichenko/simplewebapp
-      tag: "production-70dc5d2"
+      repository: gcr.io/test-project-266218/github.com/Sergeybon/simplewebapp
+      tag: "production-7"
     replicaCount: 1
     service:
       port: 80
