--- a/releases/simplewebapp.yaml
+++ b/releases/simplewebapp.yaml
@@ -15,8 +15,8 @@ spec:
     path: charts/simplewebapp
   values:
     image:
-      repository: gcr.io/test-project-266218/github.com/Sergeybon/simplewebapp
-      tag: "production"
+      repository: gcr.io/k8ssbondar/github.com/sergeybon/simplewebapp:production-198e77262cc7cd515bbe1d95f683bc9edcaa4ffd
+      tag: "production-198e77262cc7cd515bbe1d95f683bc9edcaa4ffd"
     replicaCount: 1
     service:
       port: 80
